--- a/.github/workflows/mirroring.yml
+++ b/.github/workflows/mirroring.yml
@@ -18,5 +18,5 @@ jobs:
 
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: git@github.com:EpitechMscProPromo2025/T-AIA-901-NAN_3
+          target_repo_url: git@github.com:EpitechMscProPromo2025/T-AIA-901-NAN_3.git
           ssh_private_key: ${{secrets.EPITECH_MIRROR_SSH_KEY}}
